added docker part 3 and deploy script updates